--- a/asp-net-core-todo/asp-net-core-todo.csproj
+++ b/asp-net-core-todo/asp-net-core-todo.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Todo\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
 </Project>
